# pydantic_ai_test

./: .gitignore  README.md  pyproject.toml
src/pydantic_ai_test/: __init__.py  agent.py  config.py  models.py
tests/: test_agent.py  test_config.py  test_models.py
